SERVER-14034 make kMaxScansToExplode a query knob